add unit test for /tarots routes
