# docs/swagger.json
@@ -78,7 +78,7 @@
                 }
             }
         },
-        "/tarots/{id}": {
+        "/tarots/{cardnumber}": {
             "get": {
                 "description": "Get a tarot card by ID",
                 "consumes": [
@@ -95,7 +95,7 @@
                     {
                         "type": "integer",
                         "description": "Tarot ID",
-                        "name": "id",
+                        "name": "cardnumber",
                         "in": "path",
                         "required": true
                     }
@@ -113,11 +113,10 @@
     },
     "definitions": {
         "models.TarotModel": {
+            "description": "Tarot Model",
             "type": "object",
             "required": [
                 "cardname",
-                "id",
-                "imageurl",
                 "number",
                 "type"
             ],
@@ -125,27 +124,17 @@
                 "cardname": {
                     "type": "string",
                     "maxLength": 255,
-                    "example": "string"
-                },
-                "id": {
-                    "type": "string",
-                    "maxLength": 15,
-                    "example": "string"
-                },
-                "imageurl": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "example": "string"
+                    "example": "The Fool"
                 },
                 "number": {
                     "type": "string",
                     "maxLength": 15,
-                    "example": "string"
+                    "example": "0"
                 },
                 "type": {
                     "type": "string",
                     "maxLength": 63,
-                    "example": "string"
+                    "example": "major"
                 }
             }
         }
